crates/aiy/tests/snapshots/shell_tests__aiy_move_new_tests__gitignore_exists.sh.snap
---
source: crates/aiy/tests/shell_tests.rs
description: tests/shell_tests/new_tests/gitignore_exists.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# check that aiy move new correctly updates existing .gitignore
mkdir example
echo "existing_ignore" > example/.gitignore
aiy move new example
cat example/.gitignore

----- results -----
success: true
exit_code: 0
----- stdout -----
existing_ignore
build/*
.trace
.coverage*

----- stderr -----
