crates/aiy/tests/snapshots/shell_tests__aiy_move_new_tests__new_then_disassemble.sh.snap
---
source: crates/aiy/tests/shell_tests.rs
description: tests/shell_tests/aiy_move_new_tests/new_then_disassemble.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# tests that aiy move new followed by aiy move disassemble succeeds


aiy move new example
cat > example/sources/example.move <<EOF
module example::example;

public fun foo(_ctx: &mut TxContext) {}
EOF
cd example

echo "=== Build ===" | tee /dev/stderr
aiy move build

echo "=== Disassemble ===" | tee /dev/stderr
aiy move disassemble build/example/bytecode_modules/example.mv

----- results -----
success: true
exit_code: 0
----- stdout -----
=== Build ===
=== Disassemble ===
// Move bytecode v6
module 0.example {
use 0000000000000000000000000000000000000000000000000000000000000002::tx_context;

public foo(_ctx#0#0: &mut TxContext) {
B0:
	0: Ret
}

}


----- stderr -----
=== Build ===
INCLUDING DEPENDENCY Bridge
INCLUDING DEPENDENCY AiySystem
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
=== Disassemble ===
